--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-#name-highlit{
+.orange-highlight{
     color: orange;
 }
 body{
     font-family: 'Playfair Display', serif;
 font-family: 'Roboto Condensed', sans-serif;
+margin: 0;
 }
 h1{
     font-size: 50px;
+}
+h2{
+    font-size: 40px;
 }
 .half{
     width: 40%;
@@ -16,4 +20,49 @@ h1{
 }
 .half img{
 width: 100%;
+}
+#top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration:none;
+    background-color: tomato;
+    padding: 10px 22px;
+    border: 2px blue solid;
+    margin-left: 80px;
+    color: white;
+    font-weight: 700;
+    border-radius: 40px;
+
+}
+.dream-area{
+    background-image:url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow:10px 10px 46px gray;
+    border-radius: 30px;
+    height: 60%;
+}
+.experience{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+}
+#border{
+    border-left: 7px solid orange;
+}
+#baby{
+    border-left: 8px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice:1;
+   
+}
+footer{
+    text-align: center;
 }
